--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,91 @@
-<h1>
-  {{title}}
-</h1>
+<div class="remote justify-align-center text-center">
+  <div class="switch" [ngClass]="{ activity : keyPress }">
+    <i class="fa fa-circle" aria-hidden="true"></i>
+  </div>
+  <div class="row">
+    <div class="col">
+      <button (click)="press('power')" class="btn btn-danger">
+        <i class="fa fa-power-off" aria-hidden="true"></i>
+      </button>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <button (click)="press('back')" class="btn btn-primary">
+        <i class="fa fa-long-arrow-left" aria-hidden="true"></i>
+      </button>
+      <button (click)="press('home')" class="btn btn-primary">
+        <i class="fa fa-home" aria-hidden="true"></i>
+      </button>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <button (click)="press('up')" class="btn btn-primary">
+        <i class="fa fa-arrow-up" aria-hidden="true"></i>
+      </button>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+
+      <button (click)="press('left')" class="btn btn-primary">
+        <i class="fa fa-arrow-left" aria-hidden="true"></i>
+      </button>
+      <button (click)="press('ok')" class="btn btn-primary">
+        <i class="fa fa-check" aria-hidden="true"></i>
+      </button>
+      <button (click)="press('right')" class="btn btn-primary">
+        <i class="fa fa-arrow-right" aria-hidden="true"></i>
+      </button>
+
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <button (click)="press('down')" class="btn btn-primary">
+        <i class="fa fa-arrow-down" aria-hidden="true"></i>
+      </button>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <button (click)="press('return')" class="btn btn-primary">
+        <i class="fa fa-undo" aria-hidden="true"></i>
+      </button>
+      <button (click)="press('asterisk')" class="btn btn-primary">
+        <i class="fa fa-asterisk" aria-hidden="true"></i>
+      </button>
+
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+
+      <button (click)="press('backward')" class="btn btn-primary">
+        <i class="fa fa-fast-backward" aria-hidden="true"></i>
+      </button>
+      <button (click)="press('play')" class="btn btn-primary">
+        <i class="fa fa-play" aria-hidden="true"></i>
+        <i class="fa fa-pause" aria-hidden="true"></i>
+      </button>
+      <button (click)="press('forward')" class="btn btn-primary">
+        <i class="fa fa-fast-forward" aria-hidden="true"></i>
+      </button>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <button (click)="press('volDown')" class="btn btn-primary">
+        <i class="fa fa-volume-down" aria-hidden="true"></i>
+      </button>
+      <button (click)="press('mute')" class="btn btn-primary">
+        <i class="fa fa-volume-off" aria-hidden="true"></i>
+
+      </button>
+      <button (click)="press('volUp')" class="btn btn-primary">
+        <i class="fa fa-volume-up" aria-hidden="true"></i>
+      </button>
+    </div>
+  </div>
+</div>
