--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,11 @@
   <div class="switch" [ngClass]="{ activity : keyPress }">
     <i class="fa fa-circle" aria-hidden="true"></i>
   </div>
+  <div class="network">
+    <a (click)="setIp()" href="javascript:void" class="network-link">
+      <i class="fa fa-link" aria-hidden="true"></i>
+    </a>
+  </div>
   <div class="row">
     <div class="col">
       <button (click)="press('power')" class="btn btn-danger">
